# habittracker

./: .gitignore  README.md  pyproject.toml
datacollectorapp/: README.md
datacollectorapp/datacollectorapp/: ContentView.swift  PhoneConnectivityManager.swift  SensorSample.swift  SessionData.swift  datacollectorappApp.swift
datacollectorapp/datacollectorapp Watch App/: Annotation.swift  ContentView.swift  WatchConnectivityManager.swift  WatchMotionManager.swift  WatchSensorSample.swift  datacollectorappApp.swift
datacollectorapp/datacollectorapp.xcodeproj/: project.pbxproj
datacollectorapp/datacollectorapp.xcodeproj/project.xcworkspace/xcuserdata/kalyanreddykatla.xcuserdatad/: UserInterfaceState.xcuserstate
datacollectorapp/datacollectorapp.xcodeproj/xcshareddata/xcschemes/: datacollectorapp Watch App.xcscheme  datacollectorapp.xcscheme
datacollectorapp/datacollectorapp.xcodeproj/xcuserdata/kalyanreddykatla.xcuserdatad/xcschemes/: xcschememanagement.plist
habittracker-ml/: README.md  main.py  pyproject.toml  requirements.txt
habittracker-ml/configs/: config.yaml
habittracker-ml/configs/model/: xgboost.yaml
habittracker-ml/configs/processing/: default.yaml
habittracker-ml/src/data/: build_features.py  make_dataset.py
habittracker-ml/src/features/: build_features.py
habittracker-ml/src/models/: metrics.py  test_model.py  train_model.py
habittracker-ml/src/notebooks/: exploration.ipynb
src/: feature_engineering.py  train_model.py
src/notebooks/: test.ipynb  train.ipynb
src/utils/: data_loader.py  logger.py  smoothing.py
